--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,12 +21,8 @@ jobs:
         node-version: 14.x
     
     #Rum npm install and build the code
-    - name: Run install
-      working-directory: ./git_finder_app
-      run: npm install
-    - name: Run build
-      working-directory: ./git_finder_app
-      run: npm run build --if-present
+    - run: npm install
+    - run: npm run build --if-present
 
     #deploy to netlify with credentials
     - name: Deploy to netlify
