--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
         NETLIFY_SITE_ID: ${{env.NETLIFY_SITE_ID}}
       with:
         args: deploy --dir=build --prod
-        env: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+        # env: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
